# RayTracing

./: LICENSE  README.md  loglevels.py  pyproject.toml  raytracer_analysis.ipynb  requirements.txt  setup.cfg  setup.py
raytracing/: dash_app.py  indexofrefractiongenerator.py  layeroutput_class.py  raypatheffects.py  raypathobjective.py  raypathoptimizer.py  raystate_class.py  raytracer.py  raytracer_computations.py  satellitepositiongenerator.py  slantpathgenerator.py
src/: dash_app.py  decimation_experiment.ipynb  endtoenddemonstration.py  main.py  raypatheffects.py  raypathobjective.py  raypathoptimizer.py  raystate_class.py  raytracer.py  raytracer_computations.py  rayvector_class.py
tests/: context.py  supportTestStructures.py  test_collisionfrequency_unittest.py  test_coordinates_unittest.py  test_decimation.py  test_decimationquantizer_unittest.py  test_demodecimation_endtoend.py  test_equalareaquantizer_unittest.py  test_igrfmodel_unittest.py  test_indexofrefractiongenerator_unittest.py  test_irimodel_unittest.py  test_lloydmaxquantizer_unittest.py  test_msisemodel_unittest.py  test_raypatheffects_unittest.py  test_raypathobjective_unittest.py  test_raypathoptimizer_unittest.py  test_raystate_unittest.py  test_raytracer_computations_unittest.py  test_raytracer_unittest.py  test_rdpquantizer_unittest.py  test_satposition_unittest.py  test_slantpath_unittest.py  test_stratificationheight_integratedtest.py  test_stratificationoptimizer_unittest.py  test_xmodel_unittest.py  test_xymodel_unittest.py  test_xyzmodel_unittest.py  unittest_computations.py
(+131 files in other folders)
